配置 Dockder运行时命令